@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <!-- alpha fade in animation -->
+    <translate
+        android:duration="1000"
+        android:fromYDelta="-100%"
+        android:toYDelta="0%" />
+
     <alpha
-        android:duration="500"
+        android:duration="100"
         android:fromAlpha="0.0"
-        android:interpolator="@android:anim/accelerate_interpolator"
         android:toAlpha="1.0" />
 
 </set>
