@@ -1,63 +1,11 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="6dip" >
+    android:orientation="vertical" >
 
-    <ImageView
-        android:id="@+id/appIconImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_margin="3dip"
-        android:contentDescription="@string/empty_text"
-        android:src="@drawable/ic_launcher" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="@string/app_name" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_margin="3dip"
-        android:text="@string/app_version" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_margin="2dip"
-        android:text="@string/app_developer_info" />
-
-    <View
-        android:layout_width="wrap_content"
-        android:layout_height="1dip"
-        android:layout_margin="5dip"
-        android:background="@android:color/darker_gray" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_margin="3dip"
-        android:text="@string/app_desc" />
-
-    <View
-        android:layout_width="wrap_content"
-        android:layout_height="1dip"
-        android:layout_margin="5dip"
-        android:background="@android:color/darker_gray" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_margin="3dip"
-        android:text="@string/app_disclaim" />
+    <com.ae.apps.messagecounter.fragments
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </LinearLayout>
