@@ -65,6 +65,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="2dip"
+            android:layout_gravity="center_vertical"
             android:text="@string/empty_list" />
     </LinearLayout>
 
